# indic-wx-converter

./: .testr.conf  .travis.yml  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  runConverter.py  runConverterIndic.py  setup.cfg  setup.py  tox.ini
converter_indic/: __init__.py  __main__.py  ilp.py  ssf_reader.py  version.py  wxILP.py  wx_urd.map~
converter_indic/mapping/: norm_urd.map  wx-urd.map  wx_urd.map
python_converter_indic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/text/: ben-utf.txt  ben-wx.txt  hin-utf.txt  hin-wx.txt  kan-utf.txt  kan-wx.txt  mal-wx.txt  pan-utf.txt  pan-wx.txt  tam-wx.txt  tel-utf.txt  tel-wx.txt
tests/tnt/: hin-tnt.txt
wxconv/: __init__.py  __main__.py  ilp.py  ssf_reader.py  wx.py  wx_format.py
wxconv/mapping/: urd-wx.map
wxconv/tests/: test_wxconv.py
wxconv/tests/plain_text/: guj.txt  hin.txt  mal.txt  pan.txt  tam.txt  urd.txt
wxconv/tests/ssf/: hin.ssf
