[tool.poetry]
name = "wxconv"
version = "1.0.0.0"
description = "Python library for UTF to WX conversion and vice-versa for Indian languages."
authors = ["irshadbhat <bhatirshad127@gmail.com>"]
license = "MIT"

readme = "README.rst"

repository = "https://github.com/irshadbhat/indic-wx-converter"
keywords = ["nlp", "transliteration", "romanization", 'wx']

classifier = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5"
]


[tool.poetry.dependencies]
python = "*"
six = "^1.12"
pbr = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
wxconv = "wxconv:main"
