[metadata]
name = wxconv
summary = WX-converter for Indic scripts 
description-file =
  README.rst
author = Irshad Ahmad Bhat
author-email = irshad.bhat@research.iiit.ac.in
classifier =
  #Framework :: Flask
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Science/Research 
  License :: MSI
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5

[files]
packages = 
    wxconv
data_files =
    wxconv/mapping = wxconv/mapping/*

[entry_points]
console_scripts =
    wxconv = wxconv:main 

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

